# schematron-cli

./: .gitignore  .gitmodules  .stow-local-ignore  .travis.yml  Makefile  Makefile.in  README.md  configure  configure.ac  iso-schematron-xslt2.patch  m4-header.m4  prerequisites.mk  shasums.txt  stow.mk.in  unconfigured.mk  zip.mk.in
share/schematron-cli/: get-xsl-stylesheet-version.xsl  svrl-get-failed-assert-indicator.xsl
src/share/: annotate-svrl.xsl
src/share/schematron-cli/: annotated-svrl-to-text.xsl  svrl-add-line-numbers.xsl
